--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mysql2": "^3.6.5",
     "nanoid": "^3.3.7",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
